--- a/KaleMeCrazy.Models/KaleMeCrazy.Models.csproj
+++ b/KaleMeCrazy.Models/KaleMeCrazy.Models.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -66,6 +67,12 @@
     <Compile Include="ShopDetail.cs" />
     <Compile Include="ShopEdit.cs" />
     <Compile Include="ShopListItem.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KaleMeCrazy.Data\KaleMeCrazy.Data.csproj">
+      <Project>{EE219747-978C-40E7-9661-0C78F09B8808}</Project>
+      <Name>KaleMeCrazy.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
