--- a/KaleMeCrazy.WebAPI/KaleMeCrazy.WebAPI.csproj
+++ b/KaleMeCrazy.WebAPI/KaleMeCrazy.WebAPI.csproj
@@ -281,6 +281,8 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="CodeTemplates\EFModelFromDatabase\Context.cs.t4" />
+    <Content Include="CodeTemplates\EFModelFromDatabase\EntityType.cs.t4" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
