--- a/KaleMeCrazy.Data/KaleMeCrazy.Data.csproj
+++ b/KaleMeCrazy.Data/KaleMeCrazy.Data.csproj
@@ -87,6 +87,10 @@
     <Compile Include="Migrations\202102270138018_made the menuitemId nullable.designer.cs">
       <DependentUpon>202102270138018_made the menuitemId nullable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103091849155_FixIssues.cs" />
+    <Compile Include="Migrations\202103091849155_FixIssues.designer.cs">
+      <DependentUpon>202103091849155_FixIssues.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderItem.cs" />
@@ -103,6 +107,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102270138018_made the menuitemId nullable.resx">
       <DependentUpon>202102270138018_made the menuitemId nullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103091849155_FixIssues.resx">
+      <DependentUpon>202103091849155_FixIssues.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
